--- a/package.json
+++ b/package.json
@@ -49,10 +49,10 @@
 	},
 	"dependencies": {
 		"@felte/validator-zod": "^1.0.18",
+		"@supabase/supabase-js": "^2.49.1",
 		"carbon-icons-svelte": "^13.3.0",
 		"classnames": "^2.5.1",
 		"felte": "^1.3.0",
-		"firebase": "^11.4.0",
 		"memoize-one": "^6.0.0",
 		"path": "^0.12.7",
 		"zod": "^3.24.2"
